# Dominion

./: .clang-format  CMakeLists.txt  Dominion.sln  Karten.cpp  Karten.h  Kartenstapel.h  Spiel.cpp  Spiel.h  Spieler.cpp  Spieler.h  Zufall.cpp  Zufall.h  main.cpp
Dominion/: Dominion.vcxproj  Dominion.vcxproj.filters  Karten.cpp  Karten.h  Kartenstapel.h  Spiel.cpp  Spiel.h  Spieler.h  Zufall.cpp  Zufall.h  main.cpp
DominionTest/: DominionTest.vcxproj  pch.h  test.cpp
Generator/: Generator.cpp  Generator.vcxproj  main.cpp
